--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <h1>Interactive Studies</h1>
-    <p>마우스/스크롤/클릭으로 반응하는 타이포 기반 미디어 아트.</p>
+    <p>AI_interactive web 실험실.</p>
   </header>
 
   <main>
