--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main>
     <div class="grid">
       <div class="card">
-        <iframe src="PASTE_YOUR_P5_FULL_LINK_HERE"></iframe>
+        <iframe src="https://yunizzazang.github.io/studies/typo-particle/"></iframe>
         <div class="meta">
           <p class="title">Typo Particle — Trace</p>
           <p class="desc">클릭: 단어 변경 · 스크롤: 크기 · 마우스: 바람</p>
