--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <!-- 카드 복사해서 작품 추가 -->
      <div class="card">
-  <iframe src="https://yunizzazang.github.io/studies/typo-particle/"></iframe>
+  <iframe src="https://yunizzazang.github.io/studies/study-02/"></iframe>
   <a class="overlay" href="https://yunizzazang.github.io/studies/typo-particle/" target="_blank" rel="noopener"></a>
 
   <div class="meta">
