--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       <!-- 카드 복사해서 작품 추가 -->
      <div class="card">
   <iframe src="https://yunizzazang.github.io/studies/study-02/"></iframe>
-  <a class="overlay" href="https://yunizzazang.github.io/studies/typo-particle/" target="_blank" rel="noopener"></a>
-
+<a class="overlay" href="https://yunizzazang.github.io/studies/study-02/" target="_blank" rel="noopener"></a>
   <div class="meta">
     <p class="title">Typo Particle — Trace</p>
     <p class="desc">클릭: 단어 변경 · 스크롤: 크기 · 마우스: 바람</p>
