--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a class="overlay" href="https://yunizzazang.github.io/studies/study-02/" target="_blank" rel="noopener"></a>
 
       <div class="meta">
-        <p class="title">Study #2 — (원하는 이름)</p>
+        <p class="title">Whatever</p>
         <p class="desc">마우스: 반발 · 노이즈 흐름</p>
       </div>
     </div>
