--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Yuni — Interactive Studies</title>
   <style>
     body{margin:0;font-family:system-ui,-apple-system,sans-serif;background:#0b0b0b;color:#f2f2f2}
-    header{padding:28px 20px  46px;max-width:1100px;margin:0 auto}
+    header{padding:28px 20px 46px;max-width:1100px;margin:0 auto}
     h1{margin:0 0 8px;font-size:22px;font-weight:650}
     p{margin:0;opacity:.75;line-height:1.4}
-    main{max-width:1100px;margin:0 auto;padding:0 20px 40px}
+    main{max-width:1100px;margin:0 auto;padding:28px 20px 40px}
     .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:22px}
     .card{position:relative;border:1px solid rgba(255,255,255,.1);border-radius:14px;overflow:hidden;background:rgba(255,255,255,.03)}
 .overlay{
