--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
       </div>
     </div>
 
+    <div class="card">
+  <iframe src="https://yunizzazang.github.io/studies/study-03/"></iframe>
+  <a class="overlay" href="https://yunizzazang.github.io/studies/study-03/" target="_blank" rel="noopener"></a>
+
+  <div class="meta">
+    <p class="title">Two Tone Rhythm</p>
+    <p class="desc">2 colors · brightness loop · click: phase</p>
+  </div>
+</div>
+
   </div>
 </main>
 </body>
