--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <a class="overlay" href="https://yunizzazang.github.io/studies/study-03/" target="_blank" rel="noopener"></a>
 
   <div class="meta">
-    <p class="title">Two Tone Rhythm</p>
+    <p class="title">Overlay line</p>
     <p class="desc">2 colors · brightness loop · click: phase</p>
   </div>
 </div>
