--- a/studies/study-03/index.html
+++ b/studies/study-03/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
-  <script src="./sketch.js"></script>
+  <script src="./sketch.js?v=2"></script>
 </body>
 </html>
