--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="card">
-  <iframe src="https://yunizzazang.github.io/studies/study-03/"></iframe>
+  <iframe src="https://yunizzazang.github.io/studies/study-03/?v=2"></iframe>
   <a class="overlay" href="https://yunizzazang.github.io/studies/study-03/" target="_blank" rel="noopener"></a>
 
   <div class="meta">
